# telegram-mastodon-bridge

./: .gitignore  COPYING  Dockerfile  README.md  __init__.py  bot.py  credentials.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bridge/: bridge.py  exceptions.py  helper.py  tg_exception_handler.py
